--- a/src/main/java/com/szjlc/smt/ai/plugin/setting/AiToolsSetting.form
+++ b/src/main/java/com/szjlc/smt/ai/plugin/setting/AiToolsSetting.form
@@ -40,7 +40,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="19306" class="javax.swing.JTextField" binding="apiKeyTextField">
+          <component id="19306" class="javax.swing.JTextField" binding="aliApiKeyTextField">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -55,72 +55,6 @@
             <properties>
               <text value="文心一言"/>
             </properties>
-          </component>
-          <component id="49a05" class="javax.swing.JTextField" binding="textField3" default-binding="true">
-            <constraints>
-              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="97942" class="javax.swing.JTextField" binding="textField4" default-binding="true">
-            <constraints>
-              <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="f75e2" class="javax.swing.JRadioButton" binding="chatGLMRadioButton" default-binding="true">
-            <constraints>
-              <grid row="7" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="ChatGLM"/>
-            </properties>
-          </component>
-          <component id="731ca" class="javax.swing.JTextField" binding="textField5" default-binding="true">
-            <constraints>
-              <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="8c234" class="javax.swing.JTextField" binding="textField6" default-binding="true">
-            <constraints>
-              <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="64805" class="javax.swing.JRadioButton" binding="radioButton4" default-binding="true">
-            <constraints>
-              <grid row="9" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="ChatGPT"/>
-            </properties>
-          </component>
-          <component id="f9575" class="javax.swing.JTextField" binding="textField7" default-binding="true">
-            <constraints>
-              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="9e519" class="javax.swing.JTextField" binding="textField8" default-binding="true">
-            <constraints>
-              <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
           </component>
           <component id="4d4bb" class="javax.swing.JLabel">
             <constraints>
@@ -146,7 +80,7 @@
               <text value="api-host"/>
             </properties>
           </component>
-          <component id="4d0a4" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="4d0a4" class="javax.swing.JTextField" binding="baiduAuthHostTestField">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -162,7 +96,7 @@
               <text value="auth-host"/>
             </properties>
           </component>
-          <component id="359d9" class="javax.swing.JTextField" binding="textField9" default-binding="true">
+          <component id="359d9" class="javax.swing.JTextField" binding="baiduApiKeyTextField">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -217,6 +151,24 @@
             <properties>
               <text value="api-key"/>
             </properties>
+          </component>
+          <component id="d05d6" class="javax.swing.JTextField" binding="baidduApiHostTextField">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="b1519" class="javax.swing.JTextField" binding="baiduApiSecertKey">
+            <constraints>
+              <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
